--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Azure OpenAI configuration
 AZURE_OPENAI_ENDPOINT=https://<resource>.openai.azure.com/
 AZURE_OPENAI_API_KEY=<your-api-key>
-AZURE_OPENAI_API_VERSION=<your-model-api-version>
-AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=<example-gpt-4o>
-AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=<deployment-name>
+AZURE_OPENAI_API_VERSION=<your-api-version>
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=<llm-deployment-name>
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=<embedding-deployment-name>
 
 AZURE_SEARCH_ENDPOINT=https://<search-service-name>.search.windows.net
 INDEX_NAME=<index-name>
