--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "agent-framework>=1.0.0b251211",
+    "agent-framework==1.0.0b251211",
     "ipykernel>=7.0.1",
     "jupyter>=1.1.1",
     "jupyterlab>=4.4.10",
