--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ name = "agent-framework-workshop"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "==3.12.0"
+requires-python = "~=3.12.0"
 dependencies = [
-    "agent-framework==1.0.0b251211",
+    "agent-framework==1.0.0b260116",
     "ipykernel>=7.0.1",
     "jupyter>=1.1.1",
     "jupyterlab>=4.4.10",
