--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,19 @@ readme = "README.md"
 requires-python = "==3.12.0"
 dependencies = [
     "agent-framework==1.0.0b260116",
+    "agent-framework-azure-ai-search",
+    "agent-framework-azure-ai",
+    "agent-framework[devui]",
     "ipykernel>=7.0.1",
     "jupyter>=1.1.1",
     "jupyterlab>=4.4.10",
     "python-dotenv>=1.1.1",
-    "agent-framework[devui]",
     "fastmcp==3.0.0b1",
     "fastapi>=0.116.0",
     "uvicorn>=0.35.0",
     "azure-search-documents>=11.7.0b2",
     "azure-core>=1.36.0",
+    "pymupdf>=1.26.7",
 ]
 
 [tool.uv]
