--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME=<embedding-deployment-name>
 
 AZURE_SEARCH_ENDPOINT=https://<search-service-name>.search.windows.net
 INDEX_NAME=<index-name>
+INDEX_2_NAME=<index-name>
 SEARCH_API_KEY=<search-service-key>
